ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: namespace
  labels:
    app: guestbook
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
    - host: myguestbook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-svc
                port:
                  number: 8080
